Closed Bug 1654601 Opened 5 years ago Closed 5 years ago

Crash in [@ mozilla::a11y::GeckoTextMarker::NormalizePrevious]

Categories

(Core :: Disability Access APIs, defect, P1)

80 Branch
Desktop
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla80
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox78 --- unaffected
firefox79 --- unaffected
firefox80 --- fixed

People

(Reporter: MarcoZ, Assigned: eeejay)

References

(Regression)

Details

(Keywords: crash, regression, Whiteboard: [Mac2020_2])

Crash Data

Attachments

(1 file)

This bug is for crash report bp-8777b3fd-4d14-4de7-8738-494eb0200722.

Top 10 frames of crashing thread:

0 XUL mozilla::a11y::GeckoTextMarker::NormalizePrevious accessible/generic/Accessible-inl.h:45
1 XUL -[MOXTextMarkerDelegate moxLeftWordTextMarkerRangeForTextMarker:] accessible/mac/MOXTextMarkerDelegate.mm:146
2 XUL -[MOXAccessibleBase accessibilityAttributeValue:forParameter:] accessible/mac/MOXAccessibleBase.mm:292
3 AppKit AppKit@0x679a39 
4 AppKit AppKit@0x675251 
5 AppKit AppKit@0x6765bf 
6 AppKit AppKit@0x47988c 
7 HIServices HIServices@0x2a00a 
8 HIServices HIServices@0x4c5ae 
9 HIServices HIServices@0xa0c3 

I got this after closing the Twitter Compose area where I had tested a bug. It's not 100% reproducible.

Assignee: nobody → eitan
Status: NEW → ASSIGNED
Pushed by mzehe@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6ff900a299dc Ensure given text marker is valid in public API. r=MarcoZ
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80

Set release status flags based on info from the regressing bug 1653421

Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: