Bug 1654601 - Ensure given text marker is valid in public API. r=MarcoZ

Differential Revision: https://phabricator.services.mozilla.com/D84567